Tests/Runtime2/Error/Mixed/.build/mixedcatcher.pr
[
  {
    "name": "MixedCatcher",
    "description": "Sets the %mixedCaught% variable to true (with a note indicating the PR value is null).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %mixedCaught% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%mixedCaught%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/MixedCatcher.goal",
    "prPath": "/.build/mixedcatcher.pr",
    "hash": "a0848b3b32f6aca7e670247d79e5ae4b3856ac7f6beaf496c5b132e23a2daa67",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]